--- a/part2/notes-frontend/src/index.css
+++ b/part2/notes-frontend/src/index.css
@@ -9,6 +9,11 @@ h1 {
   font-size: 15px;
 }
 
+.important {
+  font-weight: bold;
+  color: black;
+}
+
 .error {
   color: red;
   background: lightgrey;
