--- a/part5/bloglist-frontend/src/index.css
+++ b/part5/bloglist-frontend/src/index.css
@@ -15,3 +15,16 @@
   color: green;
   border-color: green;
 }
+
+.blog {
+  padding-top: 10px;
+  padding-left: 2px;
+  border: solid;
+  border-width: 1px;
+  margin-bottom: 5px;
+}
+
+.blog-title {
+  font-style: italic;
+  font-weight: bolder;
+}
